--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.28",
+    "d3": "^5.7.0",
+    "d3-drag": "^1.2.3",
+    "d3-force": "^2.0.0",
+    "d3-shape": "^1.3.3",
+    "d3-zoom": "^1.7.3",
     "react": "^16.7.0",
+    "react-d3-graph": "^2.0.0-rc2",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-vis": "^1.11.6"
   },
   "scripts": {
     "start": "react-scripts start",
