--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
+  - "stable"
+cache:
+  directories:
+    - node_modules
+script:
+  - npm run build
 after_success:
 - curl --ftp-create-dirs
        -T build/
