--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ cache:
   directories:
     - node_modules
 script:
-  - npm run build
+  - npm install
+  - npm run-script build
 after_success:
 - curl --ftp-create-dirs
        -T build/
